# The-Decivoc-Scriptorium

./: AndroidManifest.xml  CMakeLists.txt  PROTOCOL.md  README.md  blacksmith.cpp  build.gradle  editor.html  index.html  settings.gradle
.github/workflows/: bootstrap.yml  bootstrap.yml.
